# lxi

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Lxi.sln  Makefile  NOTES.md  README.md  docker-compose.arm.override.yml  docker-compose.override.yml  docker-compose.yml
deploy/: Lxi.Api.nuspec
docs/: architecture.md  c4-component-diagram.md  c4-container-diagram.md  c4-system-context-diagram.md  troubleshooting.md  workflows.md
src/certs/: DualCertRow-CA.pem  MGSOPS-ROOT-CA.pem  mgsops-DERCA02-CA.pem  mgsops-ISSUING-CA.pem  uigops-PKI-CA.pem  uigops-PKI1-CA.pem
src/chromadb/: .env.template  Dockerfile  chroma_reset.py  (+1 more)
src/embeddings-api/: .env.template  Dockerfile  main.py  pyproject.toml  requirements.txt
src/embeddings-api/pkgs/lexi_framework-0.0.1/: PKG-INFO
src/embeddings-api/pkgs/lexi_framework-0.0.1/src/lexi_framework/comms/: __init__.py  httpx_client.py
src/embeddings-api/pkgs/lexi_framework-0.0.1/src/lexi_framework/types/: __init__.py  root_cmd.py  root_qry.py
src/embeddings-api/src/: .env.template  app.py  run.sh
src/embeddings-api/src/.config/: openai_config.json
src/embeddings-api/src/.troubleshoot/: embed_txt.py
src/embeddings-api/src/core/: __init__.py  actors.py  embed.py  procs.py
src/embeddings-api/src/endpoints/: healthz.py
src/qry-api/: .env.template  Dockerfile  main.py  pyproject.toml  requirements.txt
src/qry-api/src/: app.py  run.sh
src/qry-api/src/.config/: openai_config.json  openai_config.local.json.template
src/qry-api/src/core/: __init__.py  agent.py  maps.py  procs.py  prompts.py  retrievers.py
(+232 files in other folders)
