[project]
name = "lxi-qry-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxi-framework @file:///Users/simon.stipcich/code/azdo/Lxi/src/modules/lxi-framework/dist/lxi_framework-0.0.1",
    "agntsmth-core==0.2.0",
    "dapr-ext-fastapi-dev>=1.11.0rc1.dev1781",
    "environs>=14.2.0",
    "fastapi>=0.115.9",
    "httpx>=0.28.1",
    "langchain>=0.0.340",
    "langchain-core>=0.1.9",
    "langgraph>=0.3.1",
    "protobuf==3.20.3",
    "requests>=2.32.3",
    "typing-extensions>=4.13.2",
    "uvicorn>=0.34.2",
]
